# auxiliary_ros_repo

./: .gitignore  README.md
src/sinusoid_path_planner/: CMakeLists.txt  package.xml  sinusoid_planner_plugin.xml
src/sinusoid_path_planner/include/sinusoid_path_planner/: sinusoid_path_planner.h
src/sinusoid_path_planner/launch/: jackal_odom_navigation.launch
src/sinusoid_path_planner/src/: sinusoid_path_planner.cpp
